# lecture2023

student_projects/: README.md
student_projects/ichikura_demo/: create_episode_rdf.ipynb  create_rdf_r3.ipynb  create_rdf_r3.py  generate_activity_graph.ipynb  generate_activity_graph.py  port_8080.txt
student_projects/ichikura_demo/.ipynb_checkpoints/: add_places-Copy1-checkpoint.ipynb  generate_activity_graph-checkpoint.ipynb  update_ontology-checkpoint.ipynb
student_projects/ichikura_demo/rdf/scene2_20220602/: virtualhome2kg-Admire_art-0.ttl  virtualhome2kg-Answer_door-0.ttl  virtualhome2kg-Answer_emails-0.ttl  virtualhome2kg-Arrange_folders-0.ttl  virtualhome2kg-Breakfast-0.ttl  virtualhome2kg-Bring_dirty_plate_to_sink-0.ttl  virtualhome2kg-Browse_computer-0.ttl  virtualhome2kg-Browse_internet-0.ttl  virtualhome2kg-Browse_internet-1.ttl  virtualhome2kg-Browse_internet-10.ttl  virtualhome2kg-Browse_internet-11.ttl  virtualhome2kg-Browse_internet-12.ttl  virtualhome2kg-Browse_internet-13.ttl  virtualhome2kg-Browse_internet-14.ttl  virtualhome2kg-Browse_internet-15.ttl  virtualhome2kg-Browse_internet-16.ttl  virtualhome2kg-Browse_internet-17.ttl  (+414 more)
student_projects/synchronization/: CMakeLists.txt  object_controller.py  package.xml  position_controller.py  readme.md
student_projects/synchronization/launch/: gazebo.launch
student_projects/synchronization/meshes/: arrow.STL
student_projects/synchronization/scripts/: object_controller.py
student_projects/synchronization/urdf/: object.sdf  object.urdf
student_projects/synchronization/worlds/: my_world.xml
(+9044 files in other folders)
