<?xml version="1.0"?>
<package format="2">
  <name>synchronization</name>
  <version>0.0.0</version>
  <description>The synchronization package</description>


  <maintainer email="shen@todo.todo">shen</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>


  <export>

  </export>
</package>
